cs315_codes/yacc_conflicts/c1.y
%token A B C D E F
%%
start: x | y;
x: A B C D;
y: A B E F;
