cs315_codes/yacc_conflicts/y.output
   0  $accept : start $end

   1  start : x
   2        | y

   3  $$1 :

   4  x : $$1 A A NL

   5  $$2 :

   6  y : $$2 A B NL

0: reduce/reduce conflict (reduce 3, reduce 5) on A
state 0
	$accept : . start $end  (0)
	$$1 : .  (3)
	$$2 : .  (5)

	.  reduce 3

	start  goto 1
	x  goto 2
	y  goto 3
	$$1  goto 4
	$$2  goto 5


state 1
	$accept : start . $end  (0)

	$end  accept


state 2
	start : x .  (1)

	.  reduce 1


state 3
	start : y .  (2)

	.  reduce 2


state 4
	x : $$1 . A A NL  (4)

	A  shift 6
	.  error


state 5
	y : $$2 . A B NL  (6)

	A  shift 7
	.  error


state 6
	x : $$1 A . A NL  (4)

	A  shift 8
	.  error


state 7
	y : $$2 A . B NL  (6)

	B  shift 9
	.  error


state 8
	x : $$1 A A . NL  (4)

	NL  shift 10
	.  error


state 9
	y : $$2 A B . NL  (6)

	NL  shift 11
	.  error


state 10
	x : $$1 A A NL .  (4)

	.  reduce 4


state 11
	y : $$2 A B NL .  (6)

	.  reduce 6


Rules never reduced:
	$$2 :  (5)


State 0 contains 1 reduce/reduce conflict.


5 terminals, 6 nonterminals
7 grammar rules, 12 states
